# Investigator

./: .gitignore  AGENTS.md  README.md  context.md  pyproject.toml
src/investigator/: __main__.py
src/investigator/analysis/: report.py
src/investigator/collectors/: activity.py  logins.py  resources.py
src/investigator/models/: models.py
src/investigator/utils/: security.py
tests/: test_models.py  test_report.py  test_security.py
