[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "investigator"
version = "0.1.0"
description = "Windows forensics: who logged in, when, what they did, and resource consumption"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
investigator = "investigator.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
